feat: add funnel AOV from OTEL LogAttributes